# range-flow-forecasting

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
config/: __init__.py  default.py
scripts/: evaluate.py  train.py  visualize.py
src/baselines/: evaluate_baselines.py  models.py  train_baselines.py
src/data/: bev_utils.py  range_image_utils.py  temporal_dataset.py
src/model/: history_encoder.py  latent_world_model.py  losses.py  range_vae.py  world_model.py
tests/: test_model.py
